Major library change. x8 speedtup on testing. Added Sigmoid activation function with boundary conditions.